# src/app/api/v1/orders/[id]/route.ts
@@ -55,6 +55,8 @@ const orderSelectFields = {
   towHitch: true,
   autopilot: true,
   seats: true,
+  source: true,
+  tostUserId: true,
   deliveryWindow: true,
   deliveryLocation: true,
   vin: true,
