# src/lib/types.ts
@@ -21,6 +21,8 @@ export interface Order {
   towHitch: string | null
   autopilot: string | null
   seats: string | null
+  source: string | null
+  tostUserId: string | null
   deliveryWindow: string | null
   deliveryLocation: string | null
   vin: string | null
